test/bad/functions/call11.px

func f(s: String) def
    return

f("", s="")
